--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,10 +3,12 @@
   "name": "Chrome Extension with React & Webpack",
   "description": "A chrome extension boilerplate built with React 17, Webpack 5, and Webpack Dev Server 4",
   "options_page": "options.html",
-  "background": { "service_worker": "background.bundle.js" },
+  "background": {
+    "service_worker": "background.bundle.js"
+  },
   "action": {
-    "default_popup": "popup.html",
-    "default_icon": "icon-34.png"
+    "default_icon": "icon-34.png",
+    "default_title": "Click to open panel"
   },
   "chrome_url_overrides": {
     "newtab": "newtab.html"
@@ -21,6 +23,7 @@
       "css": ["content.styles.css"]
     }
   ],
+  "permissions": ["sidePanel", "declarativeNetRequest"],
   "devtools_page": "devtools.html",
   "web_accessible_resources": [
     {
